@@ -1,6 +1,7 @@
 To do: focal for multi-layer objects
 
 --- development version 
+fixed bug in summary reported by Agustin Lobo
 fixed bug in terrain/flowdir reported by Marie Morfin
 zlim (argument to plot) did not function properly when used to extend the values range (reported by Bart)
 writeRaster now honours the value of the NAvalue argument when writing a ncdf file (requested by Thiago Veloso)
